kubernetes/task2/fortune.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortune-deployment
  namespace: bohdan
  labels:
    app: fortune
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fortune
  template:
    metadata:
      labels:
        app: fortune
    spec:
      containers:
      - name: fortune
        image: bogdan1707/fortune:3
        ports:
        - containerPort: 80
