kubernetes/task2/fortune-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fortune-service
  namespace: bohdan
spec:
  selector:
    app: fortune
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
